--- a/index.ipynb
+++ b/index.ipynb
@@ -789,7 +789,8 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    ret"
+    "    distance = selected_trip\n",
+    "    return distance"
    ]
   },
   {
