Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -789,7 +789,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    distance_squared = neighbor_trip['pickup_']\n",
+    "    distance_squared = neighbor_trip['pickup_latitude'] - selected_trip['pickup_latitude']\n",
     "    return distance"
    ]
   },
