Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -832,7 +832,9 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    pass"
+    "    \n",
+    "    neighbor \n",
+    "    return neighbor_trip"
    ]
   },
   {
