Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -833,7 +833,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    \n",
-    "    neighbor \n",
+    "    neighbor_trip['distance_from_selected'] = distance_\n",
     "    return neighbor_trip"
    ]
   },
