Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -832,8 +832,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    \n",
-    "    neighbor_trip['distance_from_selected'] = distance_\n",
+    "    distance_from_selected = \n",
+    "    neighbor_trip['distance_from_selected'] = distance_from_selected\n",
     "    return neighbor_trip"
    ]
   },
