Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -832,7 +832,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance_from_selected = \n",
+    "    distance_from_selected = distance_location(selected_trip)\n",
     "    neighbor_trip['distance_from_selected'] = distance_from_selected\n",
     "    return neighbor_trip"
    ]
