--- a/index.ipynb
+++ b/index.ipynb
@@ -827,21 +827,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance_from_selected = distance_location(selected_trip)\n",
+    "    distance_from_selected = distance_location(selected_trip, neighbor_trip)\n",
     "    neighbor_trip['distance_from_selected'] = distance_from_selected\n",
     "    return neighbor_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pickup_latitude': 40.766931,\n",
+       " 'pickup_longitude': -73.982098,\n",
+       " 'trip_distance': 1.3,\n",
+       " 'distance_from_selected': 0.23505256047318146}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors(first_trip, second_trip)\n",
     "\n",
