Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -895,7 +895,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    \n",
+    "    for neighbor in neighbors:\n",
+    "        \n",
     "    \n",
     "    return neighbors"
    ]
