--- a/index.ipynb
+++ b/index.ipynb
@@ -896,7 +896,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    for neighbor in neighbors:\n",
-    "        \n",
+    "        distance_between_neighbors(selected_individual, neighbor)\n",
     "    \n",
     "    return neighbors"
    ]
