Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -895,8 +895,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    for neighbor in neighbors:\n",
-    "        distance_between_neighbors(selected_individual, neighbor)\n",
+    "    remaining_neighbors = filter(lambda neighbor: )\n",
     "    \n",
     "    return neighbors"
    ]
