--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -895,7 +895,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual,neighbors)\n",
+    "    remaining_neighbors = filter(lambda neighbor: )\n",
     "    \n",
     "    return neighbors"
    ]
