Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -944,20 +944,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    neighbor_distances = distance_all(selected_trip, trips)\n",
-    "    sorted_neighbors = sorted(neighbor_distances, key=lambda nei)"
+    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance_from_selected'])\n",
+    "    return sorted_neighbors[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'trip_distance': 18.38,\n",
+       "  'pickup_latitude': '40.64499',\n",
+       "  'pickup_longitude': '-73.781149999999997',\n",
+       "  'distance_from_selected': 0.0},\n",
+       " {'trip_distance': 7.78,\n",
+       "  'pickup_latitude': '40.644829999999999',\n",
+       "  'pickup_longitude': '-73.781577999999996',\n",
+       "  'distance_from_selected': 0.0004569288784918792},\n",
+       " {'trip_distance': 12.7,\n",
+       "  'pickup_latitude': '40.644657000000002',\n",
+       "  'pickup_longitude': '-73.782229000000001',\n",
+       "  'distance_from_selected': 0.0011292165425673159}]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_trip = {'pickup_latitude': 40.64499,\n",
     "'pickup_longitude': -73.78115,\n",
